tests/negative/Internal/Positivity/NegParam.juvix
module NegParam;

type T (A : Type) :=
  | c : (A -> T A) -> T A;
